# aws-mlops-support-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  project_summary.md  pyproject.toml  tasks.md
.github/workflows/: build-push-ecr.yml
deploy/: aws_ecr_setup.md  aws_ecs_setup.md  task-definition.json
src/: app.py  config.py  observability.py
src/agent/: answer.py  ask.py  confidence.py  graph.py  jira_tool.py  nodes.py  prompts.py  retriever.py  state.py  ticket.py
src/demo/: streamlit_app.py
src/evals/: __init__.py  __main__.py  dataset.py  results.md  run.py
src/ingest/: __init__.py  __main__.py  chunk.py  fetch.py  index.py  sanity_check.py  sources.py
src/rag/: answer.py  ask.py  confidence.py  retriever.py
tests/: jira_live_check.py  test_answer.py  test_confidence.py  test_config.py  test_demo.py  test_evals.py  test_graph.py  test_ingest_chunk.py  test_jira_tool.py  test_observability.py  test_retriever.py  test_routing.py  test_ticket.py
