[project]
name = "aws-mlops-support-agent"
version = "0.1.0"
requires-python = ">=3.13, <4.0"
dependencies = [
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "langchain-pinecone>=0.2.13",
    "langgraph>=1.2.7",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
# Put the project root on sys.path so tests can `from src import config`.
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
# E/F = pycodestyle/pyflakes basics, I = import sorting,
# UP = modern-python upgrades, B = common bug patterns (bugbear)
select = ["E", "F", "I", "UP", "B"]
